# Lab8_alg

./: CMakeLists.txt  main.cpp
docs/: Gardner_Perry-Mason_26_The-Case-of-the-Golddigger-s-Purse_RuLit_Me.txt  Gruber_Johnny-Fletcher-P-I-_12_The-Leather-Duke_RuLit_Me.txt  Lee_Harry_Potter_and_the_Half-Blood_Prince_RuLit_Net.txt  Rouling_Harry_Potter_5_Harry_Potter_and_the_Order_of_the_Phoenix_RuLit_Net.txt  Vulrich_Deadline-at-Dawn_RuLit_Me.txt  harry-potter-and-the-sorcerer-s-stone_RuLit_Net_104419.txt  harry_potter_and_the_goblet_of_fire.u.txt
src/: Index.cpp  Index.h  main.cpp
